hw 08/hw8c_draft/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/private/var/folders/0y/vc0lpjzn7r982_lgl955qr2m0000gn/T/AppTranslocation/5B981197-5130-45A9-8596-5E332751E301/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft
-d
/Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc
-encoding
UTF-8
-charset
UTF-8
/Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/SimpleLineManager.java
<---- end of javadoc command ---->
Loading source file /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/SimpleLineManager.java...
Constructing Javadoc information...
/Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/SimpleLineManager.java:9: error: cannot find symbol
    ArrayList<SimpleLine> lines ;
              ^
  symbol:   class SimpleLine
  location: class SimpleLineManager
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/SimpleLineManager.html...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/package-frame.html...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/package-summary.html...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/allclasses-frame.html...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/allclasses-noframe.html...
Generating /Users/solomonalemu/Desktop/cs46a/homework/hw 08/hw8c_draft/doc/index.html...
1 warning
